# queen-snake

./: CMakeLists.txt  README.md  build.sh  conanfile.txt  main  main.cpp  test  test.cpp
include/: bsmooth_square_finder.hpp  common.hpp  gaussian_elimination.hpp  quadratic_residue.hpp  quadratic_sieve.hpp  tonelli_shanks.hpp  util.hpp
src/: bsmooth_square_finder.cpp  gaussian_elimination.cpp  quadratic_residue.cpp  quadratic_sieve.cpp  tonelli_shanks.cpp  util.cpp
